--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ function validate() {
       options = {
           animation: true
       };
+	  document.getElementById("myChart").style.display="inline";
 		var c = $('#myChart');
       var ct = c.get(0).getContext('2d');
       var ctx = document.getElementById("myChart").getContext("2d");
